; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-w90x900/extr_time.c_nuc900_timer0_interrupt.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-w90x900/extr_time.c_nuc900_timer0_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clock_event_device = type { i32 (%struct.clock_event_device*)* }

@nuc900_clockevent_device = common dso_local global %struct.clock_event_device zeroinitializer, align 8
@REG_TISR = common dso_local global i32 0, align 4
@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @nuc900_timer0_interrupt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nuc900_timer0_interrupt(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.clock_event_device*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  store %struct.clock_event_device* @nuc900_clockevent_device, %struct.clock_event_device** %5, align 8
  %6 = load i32, i32* @REG_TISR, align 4
  %7 = call i32 @__raw_writel(i32 1, i32 %6)
  %8 = load %struct.clock_event_device*, %struct.clock_event_device** %5, align 8
  %9 = getelementptr inbounds %struct.clock_event_device, %struct.clock_event_device* %8, i32 0, i32 0
  %10 = load i32 (%struct.clock_event_device*)*, i32 (%struct.clock_event_device*)** %9, align 8
  %11 = load %struct.clock_event_device*, %struct.clock_event_device** %5, align 8
  %12 = call i32 %10(%struct.clock_event_device* %11)
  %13 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %13
}

declare dso_local i32 @__raw_writel(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
